# FreeSimpleGUI

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  NOTICE  correção de erro.txt  mkdocs.yml  psgtray.py  pyproject.toml  readme.ja.md  readme.md  readthedocs.yml  setup.cfg  setup.py
.github/workflows/: release-qt.yaml  release-web.yaml  release-wx.yaml  release.yaml
DemoPrograms/: Browser_START_HERE_Demo_Programs_Browser.py  Demo_All_Elements.py  Demo_All_Elements_Simple.py  Demo_Animated_GIFs.py  Demo_Animated_GIFs_Using_PIL.py  Demo_Auto_Save_Window_Position.py  Demo_Bar_Chart.py  Demo_Base64_Image_Encoder.py  Demo_Base64_Single_Image_Encoder.py  Demo_Borderless_Window.py  Demo_Button_Can_Button_Images.py  Demo_Button_Click.py  Demo_Button_Events_From_Browse.py  Demo_Button_Func_Calls.py  Demo_Button_Simulated_With_Highlighting_Using_Bind.py  Demo_Button_States.py  Demo_Button_Toggle.py  Demo_Button_Toggle2.py  Demo_Button_Toggle_Simple_Graphic.py  Demo_Buttons_Base64_Shaded.py  Demo_Buttons_Base64_Simple.py  Demo_Buttons_Base64_User_Settings.py  Demo_Buttons_Mac.py  Demo_Buttons_Nice_Graphics.py  Demo_Buttons_Realtime.py  Demo_CLI_or_GUI.py  Demo_Calendar.py  Demo_Canvas.py  Demo_Chat.py  Demo_Chat_With_History.py  Demo_Chatterbot.py  Demo_Chatterbot_With_TTS.py  Demo_Checkboxes_Custom.py  Demo_Class_Wrapper.py  Demo_Close_Attempted_Event.py  Demo_Color_Chooser_Custom.py  Demo_Color_Names.py  Demo_Color_Names_Smaller_List.py  Demo_Color_Swatches.py  Demo_Column_And_Frames.py  (+314 more)
DemoPrograms/PyDroid3/: Demo_Game_Frontend_Battleship.py  Demo_OpenCV_4_Line_Program.py  Demo_OpenCV_Webcam_ASCII.py  Demo_OpenCV_Webcam_Minimal.py
FreeSimpleGUI/: FreeSimpleGUI.py  __init__.py  _utils.py  tray.py  window.py
FreeSimpleGUI/elements/: __init__.py  base.py  button.py  calendar.py  canvas.py  checkbox.py  column.py  combo.py  error.py  frame.py  graph.py  helpers.py  image.py  input.py  list_box.py  menu.py  multiline.py  option_menu.py  pane.py  progress_bar.py  radio.py  separator.py  sizegrip.py  slider.py  spin.py  status_bar.py  stretch.py  tab.py  table.py  text.py  tree.py
FreeSimpleGUIQt/: readme.md  setup.cfg
FreeSimpleGUIQt/Demo Programs/: Demo_Color_Chooser_Custom.py  Demo_Design_Pattern_Multiple_Windows.py  Demo_Design_Pattern_Multiple_Windows1.py  Demo_Design_Pattern_Multiple_Windows2.py  Demo_HowDoI.py  Demo_Tree_Element.py  Qt_All_Widgets.py  Qt_Demo_Desktop_Widget_CPU_Dashboard.py  Qt_Demo_Desktop_Widget_CPU_Graph.py  Qt_Demo_Desktop_Widget_Timer.py  Qt_Demo_LED_Clock_Weather.py  Qt_Demo_Matplotlib_Two_Windows.py  Qt_Demo_OpenCV_Webcam.py  Qt_Demo_System_Tray_Icon.py  Qt_Demo_Table_Element.py  Qt_Demo_Touch_Keyboard.py  Qt_Demo_imwatchingyou.py  Qt_Dial.py  Qt_Scrape_GitHub_Issues.py  Qt_Scrape_GitHub_Issues_System_Tray.py  Qt_Test.py  Qt_Widget_Summary.py
FreeSimpleGUIQt/FreeSimpleGUIQt/: FreeSimpleGUIQt.py  __init__.py
FreeSimpleGUIWeb/: readme.md  setup.cfg
FreeSimpleGUIWeb/Demo Programs/: Demo_Graph_pymunk_2D_Graphics.py  Web_Color_Names.py  Web_Color_Names_Smaller_List.py  Web_Demo_Font_Sizer.py  Web_Demo_HowDoI.py  Web_Desktop_Widget_CPU_Utilization.py  Web_Matplotlib.py  Web_Matplotlib_Browser.py  Web_Matplotlib_Simple.py  Web_Matplotlib_Simple_PyPlot.py  Web_Popup.py  Web_Simple.py  Web_Table_Element.py  Web_Timer.py  Web_Widget_Summary.py  Web_psutil_Kill_Processes.py  widgets_overview_app.py
FreeSimpleGUIWeb/FreeSimpleGUIWeb/: FreeSimpleGUIWeb.py  __init__.py
FreeSimpleGUIWx/: readme.md  setup.cfg
FreeSimpleGUIWx/Demo Programs/: Wx_Demo_Popups.py  Wx_Scrape_GitHub_Issues_System_Tray.py  Wx_System_Tray_Launcher.py  Wx_System_Tray_Simple.py  Wx_Widget_Summary.py
FreeSimpleGUIWx/FreeSimpleGUIWx/: FreeSimpleGUIWx.py  __init__.py
ProgrammingClassExamples/MacOS versions/: 10a PSG Plot (Matplotlib numpy pyplot(y=sinx)) .py  10b PSG Plot (axes moved).py  10c PSG Plot (axes pi format).py  10d PSG (Plots Tabs and sin cos options).py  10e PSG (Same Window).py  10f PSG (linear and quadratics).py  1a PSG (Entry and PopUp).py  1b PSG (Format).py  1c PSG (persistent form and bind key).py  1d PSG (named input keys and catch errors).py  1e PSG (validation and Look and Feel).py  1e PSG (validation).py  2a. PSG (checkbox and radiobuttons) - Copy.py  2b. PSG (Add logo).py  3 PSG (multiline display).py  4a PSG (Sliders and combo).py  4b PSG (Spinner and combo) .py  5a PSG (listboxes add remove).py  6a PSG (search linear and binary).py  6b PSG (search - disabled buttons).py  6c PSG (search text preloaded).py  6d PSG (sort and search with textbox.py  6e PSG (sort and search with listbox).py  6f PSG (data from text file).py  7a PSG (Data entry calc using file save retrieve).py  7b PSG (add validation and error trap).py  7c PSG (add get pathname to save and retrieve files).py  8a PSG (Data to plot from csv file).py  8b PSG (Tables and calc from csv file).py  8c PSG (Tables - add sort).py  8d PSG (Tables - add logo).py  9a PSG Windows(location hide).py  9b PSG Tabs example.py  9c PSG Tabs example plus.py
ProgrammingClassExamples/Win10 versions/: 10a PSG Plot (Matplotlib numpy pyplot(y=sinx)) .py  10b PSG Plot (axes moved).py  10c PSG Plot (axes pi format).py  10d PSG (Plots Tabs and sin cos options).py  10e PSG (Same Window).py  10f PSG (linear and quadratics).py  1a PSG (Entry and PopUp).py  1b PSG (Format).py  1c PSG (persistent form and bind key).py  1d PSG (named input keys and catch errors).py  1e PSG (validation and Look and Feel).py  2a. PSG (checkbox and radiobuttons) - Copy.py  2b. PSG (Add logo).py  2b_makewinexe_file.py  3 PSG (multiline display).py  4a PSG (Sliders and combo).py  4b PSG (Spinner and combo) .py  5a PSG (listboxes add remove).py  6a PSG (search linear and binary).py  (+16 more)
UserCreatedPrograms/: Code Counter.py  Klondike_Solitaire.py  Minesweeper.py  Minesweeper_Colored_Numbers.py
docs/: Demos.md  Screens.md  Screens2.md  YouTube_2020_Lesson - Source File 1.py  call reference.md  cookbook.md  extra.css  index.md  readme.md
readme_creator/: RUN_ME and START_HERE.py  app_configs.json  make_real_readme.py  readme.md  show_all_tags.py
(+15 files in other folders)
