[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "FreeSimpleGUI"
version = "5.2.0.post1"
description = "The free-forever Python GUI framework."
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "license.txt" }
authors = [
    {name = "Spencer Phillip Young", email = "spencer.young@spyoung.com"}
]
maintainers = [
    {name = "Spencer Phillip Young", email = "spencer.young@spyoung.com"}
]
keywords = ["PySimpleGui", "fork", "GUI", "UI", "tkinter", "Qt", "WxPython", "Remi", "wrapper", "simple", "easy", "beginner", "novice", "student", "graphics", "progressbar", "progressmeter"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Topic :: Multimedia :: Graphics",
    "Operating System :: OS Independent",
]

[project.urls]
# Homepage = "https://freesimplegui.org/" # TODO: Enable this once registered.
Repository = "https://github.com/spyoungtech/FreeSimpleGui"
Documentation = "https://freesimplegui.readthedocs.io/en/latest/"


[tool.setuptools]
packages = ["FreeSimpleGUI", "FreeSimpleGUI.elements"]
include-package-data = true

[project.scripts]
fsgissue = "FreeSimpleGUI:main_open_github_issue"
fsgmain = "FreeSimpleGUI:_main_entry_point"
fsghelp = "FreeSimpleGUI:main_sdk_help"
fsgver = "FreeSimpleGUI:main_get_debug_data"
fsgsettings = "FreeSimpleGUI:main_global_pysimplegui_settings"
