[metadata]
name = FreeSimpleGUI
version = 5.1.0
maintainer = Spencer Phillip Young
maintainer_email = spencer.young@spyoung.com
description = The free-forever Python GUI framework.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = PySimpleGui fork GUI UI tkinter Qt WxPython Remi wrapper simple easy beginner novice student graphics progressbar progressmeter
url = https://github.com/spyoungtech/FreeSimpleGui
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Topic :: Multimedia :: Graphics
    Operating System :: OS Independent

[options]
packages = FreeSimpleGUI
include_package_data = True
[options.entry_points]
gui_scripts =
    fsgissue=FreeSimpleGui.FreeSimpleGui:main_open_github_issue
    fsgmain=FreeSimpleGui.FreeSimpleGui:_main_entry_point
    fsghelp=FreeSimpleGui.FreeSimpleGui:main_sdk_help
    fsgver=FreeSimpleGui.FreeSimpleGui:main_get_debug_data
    fsgsettings=FreeSimpleGui.FreeSimpleGui:main_global_pysimplegui_settings
