[metadata]
name = FreeSimpleGUIQt
version = 2.0.0
maintainer = Spencer Phillip Young
maintainer_email = spencer.young@spyoung.com
description = The free-forever Python GUI framework.
long_description = file: readme.md
long_description_content_type = text/markdown
keywords = PySimpleGui fork GUI UI tkinter Qt WxPython Remi wrapper simple easy beginner novice student graphics progressbar progressmeter
url = https://github.com/spyoungtech/FreeSimpleGui
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)
    Topic :: Multimedia :: Graphics
    Operating System :: OS Independent

[options]
packages = FreeSimpleGUIQt
include_package_data = True

install_requires =
    pyside6

python_requires = >=3.9
